--- a/style.css
+++ b/style.css
@@ -847,8 +847,9 @@ nav li {
     }
 
     .badge_images span {
-        margin-top: 5px;
-        font-size: 16px;
-        color: white;
+        color: var(--twitchpurple);
+        font-family: var(--heading);
+        font-weight: 600;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
 }
