--- a/style.css
+++ b/style.css
@@ -847,8 +847,13 @@ nav li {
     }
 
     .badge_images img {
+        transition: transform 0.3s ease-in-out;
         height: 112px;
         width: 112px;
+    }
+
+    .badge_images img:hover {
+        transform: scale(1.1);
     }
 
     .badge_images span {
