--- a/style.css
+++ b/style.css
@@ -973,5 +973,21 @@ nav li {
     }
 }
 @layer Social-Buttons {
-
+    .social-links {
+        text-align: center;
+    }
+    .social-links a {
+        text-decoration: none;
+    }
+    .social-button {
+        background-color: var(--twitchpurple);
+        color: white;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-size: 1.2em;
+        text-align: center;
+        margin: 0 10px;
+        transition: background-color 0.3s ease;
+        display: inline-block;
+    }
 }
